@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 FFLAGS = -O2 -g
-FLIBS = $(EXTRAE_HOME)/lib/libmpitracef.a $(UNWIND_LIBS) $(PAPI_LIBS) $(XML2_LDFLAGS) $(XML2_LIBS) $(BFD_LIBS) $(POSIX_CLOCK_LIBS)
+FLIBS = $(EXTRAE_HOME)/lib/libmpitracef.a $(UNWIND_LIBS) $(PAPI_LIBS) $(XML2_LDFLAGS) $(XML2_LIBS) $(BFD_LIBS) $(POSIX_CLOCK_LIBS) $(ZLIB_LIBS) $(DL_LIBS)
 
 all: mpi_ping
 
