@@ -20,6 +20,7 @@ POSIX_CLOCK_LIBS=@sub_POSIX_CLOCK@
 LIBEXECINFO_LIBS=@sub_libexecinfo_libs@ # FreeBSD specific
 ZLIB_HOME=@sub_ZLIB_HOME@
 ZLIB_LIBS=@sub_ZLIB_LIBS@
+DL_LIBS=@sub_DL_LIBS@
 OPENCL_HOME=@sub_OPENCL_HOME@
 OPENCL_LDFLAGS=@sub_OPENCL_LDFLAGS@
 
